[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Chris Leech <leech@pobox.com>"]

[dependencies]
scan_fmt = "~0.1.1"
itertools = "~0.4.4"
rust-crypto = "~0.2.34"
permutohedron = "~0.2.0"
clap = "~1.5.4"
serde_json = "~0.6.0"
nom="~1.1"
clippy = { version="*", optional = true }

[features]
default=[]
